# ioutils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.md  build.sh  build_hyperscan.sh  cleanup.sh  install.sh  install_binaries.sh  update_branches.sh
3p/: build_all.sh  build_hypescan.sh  build_using_cmake.sh  build_using_configure.sh  build_using_make.sh
benchmark/: CMakeLists.txt  experiments.hpp  fast-find.cpp  fast-find_benchmark.cpp  file_read.cpp  fileio.cpp  filesystem.cpp  filesystem_benchmark.cpp  find_benchmark.cpp  locate_benchmark.cpp  mfind.cpp  read_data.cpp  run_benchmark.sh  setup.sh
cmake/: AddCXXCompilerFlag.cmake  CXXFeatureCheck.cmake  benchmark.cmake  boost.cmake  catch2.cmake  celero.cmake  clang-format.cmake  clara.cmake  cmake-scripts.cmake  fmt.cmake  format_files.cmake  glaze.cmake  hyperscan.cmake  jemalloc.cmake  llfio.cmake  lto.cmake  nanobench.cmake  reflex.cmake  shell-check.cmake  utils.cmake
command/: CMakeLists.txt  linestats.cpp  mfind.cpp  mlocate.cpp  mupdatedb.cpp  mwc.cpp
commands/: CMakeLists.txt  fast-find.cpp  fast-locate.cpp  fast-updatedb.cpp  fast-wc.cpp  first-missing-positive.cpp  mfind.cpp  mlocate.cpp  mupdatedb.cpp
include/ioutils/: fdreader.hpp  fdwriter.hpp  filesystem.hpp  ioutils.hpp  locate.hpp  read_policies.hpp  reader.hpp  resources.hpp  search.hpp  search_default.hpp  search_optimistic.hpp  search_params.hpp  stream.hpp  utilities.hpp  version.h  warnings.hpp
install/: run_checks.sh
ioutils/: CMakeLists.txt  boost_memmap.hpp  cli.cpp  console.hpp  enums.hpp  fdreader.hpp  fdwriter.hpp  filesystem.cpp  filesystem.hpp  find.hpp  find_parameters.cpp  ioutils.hpp  linestats.hpp  locate.cpp  locate.hpp  mdiff.hpp  path_utils.hpp  random_string.cpp  random_string.hpp  read_policies.hpp  reader.hpp  regex_store_policies.hpp  search.cpp  search.hpp  search_default.hpp  search_regex.hpp  simple_store_policy.hpp  stream.hpp  temporary_dir.cpp  temporary_dir.hpp  updatedb.cpp  updatedb.hpp  utilities.cpp  utilities.hpp  warnings.hpp  writer.hpp
notes/: Improve.performance.and.maintainability.of.gnu.findutils.using.modern.C++.org  db.org  fast-find-runtime-memory.twbx  fast-find.csv  fast-locate.csv  fast-locate.twbx  notes.org  resources.csv  slides.tex  todos.org
scripts/: build_using_cmake.sh  check.sh  install.sh  run_clang_tidy.sh  verify.sh
src/: boost_memmap.hpp  console.hpp  dbreader.hpp  deserializers.hpp  fdreader.hpp  fdwriter.hpp  filedb.hpp  filesystem.hpp  find.hpp  ioutils.hpp  linestats.hpp  locate.hpp  mdiff.hpp  mfind.hpp  mlocate.hpp  mmap_reader.hpp  param.hpp  path_utils.hpp  read_policies.hpp  reader.hpp  regex_policies.hpp  regex_store_policies.hpp  resources.hpp  search.hpp  search_default.hpp  search_optimistic.hpp  search_params.hpp  search_policies.hpp  search_regex.hpp  simple_policy.hpp  simple_search_policy.hpp  simple_store_policy.hpp  store_policy.hpp  stream.hpp  stream_reader.hpp  tbb_reader.hpp  temporary_dir.hpp  text.hpp  timeutils.hpp  utilities.hpp  (+1 more)
unittests/: CMakeLists.txt  deserializers.cpp  locate_test.cpp  read_data.cpp  read_data_test.cpp  read_stdin.cpp  read_stdin_test.cpp  reflex_test.cpp  search.cpp  search_test.cpp  stream_reader_test.cpp  tempdir.cpp  tempdir_test.cpp  test_data.cpp  test_data.hpp  ugrep_test.cpp  utilities.cpp  utilities_test.cpp  verify.sh  writer.cpp  writer_test.cpp
